Fixed overflow issues in solitaire.

--- a/webapp/game_defs/solitaire/game.css
+++ b/webapp/game_defs/solitaire/game.css
@@ -15,12 +15,12 @@
     float: right;
 }
 
-#player1 {
-
+#region2 {
+    overflow: visible;
 }
 
-#player1 .play-zone {
-    width: 450px;
+#region2 .zone {
+    height: auto;
 }
 
 .play-zone {
